examples/examples/counter/snapshots/counter__tests____test_counter_simple.snap
---
source: examples/examples/counter/./tests.rs
expression: harness.terminal().backend().buffer()
---
Buffer {
    area: Rect { x: 0, y: 0, width: 20, height: 10 },
    content: [
        "count: 0            ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
        "                    ",
    ],
    styles: [
        x: 0, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: BOLD,
        x: 7, y: 0, fg: Cyan, bg: Reset, underline: Reset, modifier: NONE,
        x: 8, y: 0, fg: Reset, bg: Reset, underline: Reset, modifier: NONE,
    ]
}
